compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__cast_snapshots@literal_single.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: 0 as u64;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                location: <internal>:0:8,
                kind: Cast(
                    Cast {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        source: Expression {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    2,
                                ),
                            },
                            location: <internal>:0:1,
                            kind: Literal(
                                Literal {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    location: <internal>:0:1,
                                    kind: Int(
                                        IntLiteral {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                        target: Type {
                            id: ItemId(
                                2586979368357421486,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [],
                                    },
                                ),
                                name: Named(
                                    Identifier {
                                        name: "u64",
                                        location: <internal>:5:8,
                                    },
                                ),
                                location: <internal>:5:8,
                            },
                            type_params: [],
                            location: <internal>:5:8,
                        },
                    },
                ),
            },
        ),
        location: <internal>:0:8,
    },
]
