compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__cast_snapshots@precedence_equal.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: 0 as u64 == 0;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                kind: IntrinsicCall(
                    IntrinsicCall {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        name: Callable {
                            name: Identifier {
                                name: "==",
                                location: <internal>:9:11,
                            },
                            type_arguments: [],
                            location: <internal>:9:11,
                        },
                        arguments: [
                            Expression {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        2,
                                    ),
                                },
                                kind: Cast(
                                    Cast {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                2,
                                            ),
                                        },
                                        source: Expression {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            kind: Literal(
                                                Literal {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            3,
                                                        ),
                                                    },
                                                    kind: Int(
                                                        IntLiteral {
                                                            id: ExpressionId {
                                                                def: ItemId(
                                                                    0,
                                                                ),
                                                                index: Idx(
                                                                    3,
                                                                ),
                                                            },
                                                            value: 0,
                                                            kind: I32,
                                                        },
                                                    ),
                                                    location: <internal>:0:1,
                                                },
                                            ),
                                            location: <internal>:0:1,
                                        },
                                        target: Type {
                                            id: ItemId(
                                                13902787388289951280,
                                            ),
                                            name: Path {
                                                root: [],
                                                name: Namespace {
                                                    name: Identifier {
                                                        name: "u64",
                                                        location: <internal>:5:8,
                                                    },
                                                },
                                                location: <internal>:5:8,
                                            },
                                            location: <internal>:5:8,
                                        },
                                        location: <internal>:0:8,
                                    },
                                ),
                                location: <internal>:0:8,
                            },
                            Expression {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        4,
                                    ),
                                },
                                kind: Literal(
                                    Literal {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                4,
                                            ),
                                        },
                                        kind: Int(
                                            IntLiteral {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        4,
                                                    ),
                                                },
                                                value: 0,
                                                kind: I32,
                                            },
                                        ),
                                        location: <internal>:12:13,
                                    },
                                ),
                                location: <internal>:12:13,
                            },
                        ],
                        location: <internal>:0:13,
                    },
                ),
                location: <internal>:0:13,
            },
        ),
        location: <internal>:0:13,
    },
]
