compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@else_if_statements.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "if true { let a = 0; } else if false { let a = 0; }"
---
[
    Statement {
        id: 0,
        kind: If(
            If {
                id: 0,
                cases: [],
                location: <internal>:0:51,
            },
        ),
        location: <internal>:0:51,
    },
]
