compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@equality_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "let a = 0; if a == 1 { }"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                name: Identifier {
                    name: "a",
                    location: <internal>:4:5,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:8:9,
                    kind: Literal(
                        Literal {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            location: <internal>:8:9,
                            kind: Int(
                                IntLiteral {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    value: 0,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:0:10,
    },
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                2,
            ),
        },
        kind: If(
            If {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        2,
                    ),
                },
                cases: [
                    Condition {
                        id: StatementId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                3,
                            ),
                        },
                        condition: Some(
                            Expression {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        4,
                                    ),
                                },
                                location: <internal>:14:19,
                                kind: InstanceCall(
                                    InstanceCall {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                4,
                                            ),
                                        },
                                        callee: Expression {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    6,
                                                ),
                                            },
                                            location: <internal>:14:15,
                                            kind: Variable(
                                                Variable {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            6,
                                                        ),
                                                    },
                                                    reference: StatementId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    name: Identifier {
                                                        name: "a",
                                                        location: <internal>:14:15,
                                                    },
                                                    location: <internal>:14:15,
                                                },
                                            ),
                                        },
                                        name: Identifier {
                                            name: "==",
                                            location: <internal>:16:18,
                                        },
                                        type_arguments: [],
                                        arguments: [
                                            Expression {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        5,
                                                    ),
                                                },
                                                location: <internal>:19:20,
                                                kind: Literal(
                                                    Literal {
                                                        id: ExpressionId {
                                                            def: ItemId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                5,
                                                            ),
                                                        },
                                                        location: <internal>:19:20,
                                                        kind: Int(
                                                            IntLiteral {
                                                                id: ExpressionId {
                                                                    def: ItemId(
                                                                        0,
                                                                    ),
                                                                    index: Idx(
                                                                        5,
                                                                    ),
                                                                },
                                                                value: 1,
                                                                kind: I32,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                ),
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:21:24,
                        },
                        location: <internal>:14:24,
                    },
                ],
                location: <internal>:11:24,
            },
        ),
        location: <internal>:11:24,
    },
]
