compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@if_else_empty.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "if true { } else { }"
---
[
    Statement {
        id: 0,
        kind: If(
            If {
                id: 0,
                cases: [],
                location: <internal>:0:20,
            },
        ),
        location: <internal>:0:20,
    },
]
